# pytest-fixture-order

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  run_tests.py  tox.ini
pytest_fixture_order/: __init__.py  compat.py  plugin.py
tests/: conftest.py  test_plugin.py
