[tool.poetry]
name = 'pytest-fixture-order'
version = "0.1.4"
description = 'pytest plugin to control fixture evaluation order'
readme = 'README.md'
authors = ['Zach "theY4Kman" Kanzler <they4kman@gmail.com>']
license = 'MIT'
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
]

packages = [
    { include = "pytest_fixture_order" },
    { include = "pytest.ini", format = "sdist" },
    { include = "tox.ini", format = "sdist" },
    { include = "tests", format = "sdist" },
    { include = "LICENSE", format = "sdist" },
    { include = "CHANGELOG.md", format = "sdist" },
    { include = "README.md", format = "sdist" },
]

repository = 'https://github.com/theY4Kman/pytest-fixture-order'
homepage = 'https://github.com/theY4Kman/pytest-fixture-order'

keywords = ['pytest']


[tool.poetry.dependencies]
python = '^3.6'
pytest = ">=3.0"


[tool.poetry.dev-dependencies]
tox = '^3.9'


[tool.poetry.plugins."pytest11"]
fixture_order = "pytest_fixture_order.plugin"


[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
