[project]
name = 'pytest-fixture-order'
version = "0.1.4"
description = 'pytest plugin to control fixture evaluation order'
requires-python = ">=3.9"

readme = 'README.md'
license = 'MIT'

authors = [
    { name = 'Zach "theY4Kman" Kanzler', email = '<they4kman@gmail.com>' }
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
]

packages = [
    { include = "pytest_fixture_order" },
    { include = "pytest.ini", format = "sdist" },
    { include = "tox.ini", format = "sdist" },
    { include = "tests", format = "sdist" },
    { include = "LICENSE", format = "sdist" },
    { include = "CHANGELOG.md", format = "sdist" },
    { include = "README.md", format = "sdist" },
]


keywords = ['pytest']

dependencies = [
    "pytest>=3.6",
]

[project.urls]
homepage = 'https://github.com/theY4Kman/pytest-fixture-order'
repository = 'https://github.com/theY4Kman/pytest-fixture-order'

[tool.poetry.group.dev.dependencies]
tox = ">=4.0"


[project.entry-points."pytest11"]
fixture_order = "pytest_fixture_order.plugin"


[build-system]
requires = ['poetry>=2.0']
build-backend = 'poetry.masonry.api'

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
